[gd_scene load_steps=2 format=3 uid="uid://bvdkaj1eb6nme"]

[ext_resource type="Script" path="res://Recipes/recipe_book_ui.gd" id="1_uey0f"]

[node name="RecipeBookUI" type="Node2D"]
script = ExtResource("1_uey0f")

[node name="InventoryCanvas" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="Background" type="ColorRect" parent="InventoryCanvas"]
offset_right = 1100.0
offset_bottom = 650.0
scale = Vector2(1.05477, 1)
color = Color(0.448371, 0.284249, 0.191908, 1)
metadata/_edit_use_anchors_ = true

[node name="ScrollContainer" type="ScrollContainer" parent="InventoryCanvas"]
offset_left = 37.0
offset_top = 56.0
offset_right = 1119.0
offset_bottom = 630.0
horizontal_scroll_mode = 0

[node name="GridContainer" type="GridContainer" parent="InventoryCanvas/ScrollContainer"]
custom_minimum_size = Vector2(10.97, 0)
layout_mode = 2
columns = 5

[node name="CloseButton" type="Button" parent="InventoryCanvas"]
offset_left = 926.0
offset_top = 10.0
offset_right = 1116.0
offset_bottom = 41.0
text = "Close"

[node name="ShowUnlockedButton" type="Button" parent="InventoryCanvas"]
offset_left = 30.0
offset_top = 10.0
offset_right = 220.0
offset_bottom = 41.0
text = "Show Unlocked Recipes"

[node name="ShowAllButton" type="Button" parent="InventoryCanvas"]
offset_left = 235.0
offset_top = 10.0
offset_right = 425.0
offset_bottom = 41.0
text = "Show All Recipes"

[connection signal="pressed" from="InventoryCanvas/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="InventoryCanvas/ShowUnlockedButton" to="." method="_on_show_unlocked_button_pressed"]
[connection signal="button_down" from="InventoryCanvas/ShowAllButton" to="." method="_on_show_all_button_button_down"]
